about text gap fixed

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1952,7 +1952,7 @@ Contact form for dance and class
   line-height: 1.7;
   color: var(--dxb-white);
 }
-.about-preview-text p {
+.about-preview-textt p {
   margin-bottom: 1.5rem;
   line-height: 1.7;
   color: #222;
